[package]
name = "k2o"
description = "Run an Auction bot in Twitch chat via the IRC Bridge."
version = "0.2.3"
edition = "2021"


[dependencies]
argh = "0.1.6"
chrono = { version = "0.4.19", features = ["serde"], optional = true }
csv = { version = "1.1", optional = true }
ctrlc = "3.2"
directories = "4.0.1"
heck = "0.3"
humantime = "2.1"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
smol = "1.2"
spin_sleep = "1.0.0"
#toml = { version = "0.5.8", features = ["preserve_order"] }
toml = "0.5.8"
twitchchat = { version = "0.14.8", features = ["async", "async-tls", "smol"] }


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"


[features]
default = ["chrono", "csv"]

# Before writing to an existing CSV file, check to make sure that its contents
#   are valid.
csv_validate = ["csv"]
# Use PascalCase rather than snake_case for fields in summary files.
summaries_pascal = []
